--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <div style="display: flex; width: 100vw; height: 100vh; justify-content: center; align-items: center; gap: 2rem;">
         <a href="javascript:void%20function(){javascript:(function(){var%20a=document.createElement(%22script%22);a.src=%22https://drive-render.corp.amazon.com/view/flysmykh%40/count.js%3Fv=%22+Date.now(),document.body.appendChild(a)})()}();" >Counter</a>
 	<a href="javascript:void%20function(){javascript:(function(){var%20a=document.createElement(%22script%22);a.src=%22https://drive-render.corp.amazon.com/view/flysmykh%40/countSE.js%3Fv=%22+Date.now(),document.body.appendChild(a)})()}();" >Counter SE</a>
+		  <a href="javascript:void%20function(){javascript:(function(){var%20a=document.title,b=prompt(%22New%20title%3F%22,a);null===b||(%22%22===b%3Fdocument.title=a:document.title=b)})()}();">New title</a>
 </body>
 </html>
