--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
         <a href="javascript:void%20function(){javascript:(function(){var%20a=document.createElement(%22script%22);a.src=%22https://unifiedflow.github.io/pstool/count.js%3Fv=%22+Date.now(),document.body.appendChild(a)})()}();" >Counter</a>
 	<a href="javascript:void%20function(){javascript:(function(){var%20a=document.createElement(%22script%22);a.src=%22https://unifiedflow.github.io/pstool/countSE.js%3Fv=%22+Date.now(),document.body.appendChild(a)})()}();" >Counter SE</a>
 		  <a href="javascript:void%20function(){javascript:(function(){var%20a=document.title,b=prompt(%22New%20title%3F%22,a);null===b||(%22%22===b%3Fdocument.title=a:document.title=b)})()}();">New title</a>
+		        <a href="javascript:void%20function(){javascript:(function(){var%20a=document.createElement(%22script%22);a.src=%22https://unifiedflow.github.io/pstool/ward.js%3Fv=%22+Date.now(),document.body.appendChild(a)})()}();" >Gravis</a>
 </body>
 </html>
